# sepractic

./: README.md
cloudDetector/: CMakeLists.txt  cloud.cpp  readme.txt
monitoringApp/data/: worktrafic.txt  youtubetrafic.txt
monitoringApp/data/crab_game/: stat_Sun-170Apr-2022_08-44-20PM.txt  stat_Sun-170Apr-2022_08-59-21PM.txt  stat_Sun-170Apr-2022_09-04-22PM.txt  stat_Sun-170Apr-2022_09-09-22PM.txt  stat_Sun-170Apr-2022_09-24-24PM.txt  stat_Sun-170Apr-2022_09-29-24PM.txt  stat_Sun-170Apr-2022_09-34-24PM.txt  stat_Sun-170Apr-2022_09-39-25PM.txt  stat_Sun-170Apr-2022_09-44-25PM.txt  stat_Sun-170Apr-2022_09-49-26PM.txt  stat_Sun-170Apr-2022_09-54-26PM.txt  stat_Sun-170Apr-2022_09-59-27PM.txt
monitoringApp/data/dota2/: stat_Sun-170Apr-2022_08-34-19PM.txt  stat_Sun-170Apr-2022_08-39-20PM.txt  stat_Sun-170Apr-2022_08-49-21PM.txt  stat_Sun-170Apr-2022_08-54-21PM.txt  stat_Sun-170Apr-2022_09-14-23PM.txt  stat_Sun-170Apr-2022_09-19-23PM.txt  stat_Sun-170Apr-2022_10-09-27PM.txt  stat_Sun-170Apr-2022_10-14-28PM.txt  stat_Sun-170Apr-2022_10-19-28PM.txt  stat_Sun-170Apr-2022_10-24-29PM.txt  stat_Sun-170Apr-2022_10-29-29PM.txt  stat_Sun-170Apr-2022_10-34-30PM.txt  stat_Sun-170Apr-2022_10-39-30PM.txt  stat_Sun-170Apr-2022_10-44-31PM.txt
monitoringApp/data/zoom/: stat_Mon-180Apr-2022_08-11-52PM.txt  stat_Mon-180Apr-2022_08-16-52PM.txt  stat_Mon-180Apr-2022_08-21-53PM.txt  stat_Mon-180Apr-2022_08-26-54PM.txt  stat_Mon-180Apr-2022_08-31-54PM.txt  stat_Mon-180Apr-2022_08-36-55PM.txt  stat_Mon-180Apr-2022_08-41-55PM.txt  (+3 more)
monitoringApp/netAnalyzer/: CMakeLists.txt  analyzer.cpp  readme.txt
monitoringApp/netStatisticSaver/: netStatisticSaver.sln
monitoringApp/practicalTask/: CMakeLists.txt  statisticAnalizer.cpp
mqttExample/: client.cpp
poohFlightSystem/: CMakeLists.txt  pooh_model.cpp
udpExample/client/: CMakeLists.txt  client.cpp
udpExample/server/: CMakeLists.txt  server.cpp
(+3 files in other folders)
